<resources>
    <string name="app_name">MEI(beta)</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_sesion">MEI</string>

    <string-array name="estados_array">
       <item>Aguascalientes</item>
       <item>Baja California</item>
       <item>Baja California Sur</item>
       <item>Campeche</item>
       <item>Coahuila</item>
       <item>Colima</item>
       <item>Chiapas</item>
       <item>Chihuahua</item>
       <item>Ciudad de México</item>
       <item>Estado de México</item>
       <item>Durango</item>
       <item>Guanajuato</item>
       <item>Guerrero</item>
       <item>Hidalgo</item>
       <item>Jalisco</item>
       <item>México</item>
       <item>Michoacán</item>
       <item>Morelos</item>
       <item>Nayarit</item>
       <item>Nuevo León</item>
       <item>Oaxaca</item>
       <item>Puebla</item>
       <item>Querétaro</item>
       <item>Quintana Roo</item>
       <item>San Luis Potosí</item>
       <item>Sinaloa</item>
       <item>Sonora</item>
       <item>Tabasco</item>
       <item>Tamaulipas</item>
       <item>Tlaxcala</item>
       <item>Veracruz</item>
       <item>Yucatán</item>
       <item>Zacatecas</item>
    </string-array>

    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="hacer_un_examen">hacer un examen</string>
    <string name="textview">TextView</string>
    <string name="aun_no_has_contestado_un_examen">Aun no has contestado un examen</string>
    <string name="sponsor1">Sponsor1</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="patrocinador">Patrocinador</string>
    <string name="universidad_de_la_semana">Universidad de la semana</string>
    <string name="me_interesa">Me interesa</string>
    <string name="no_me_interesa">No me interesa</string>
    <string name="tendencias">Tendencias</string>
    <string name="te_interesar_a_organizar_una_cooperacion_grupal_para_comprar_algo_al_aula">¿Te interesaría organizar una cooperacion grupal para comprar algo al aula?</string>
    <string name="no_hay_conexion_a_internet">No hay conexion a internet</string>
    <string name="enviar">enviar</string>
    <string name="contenido">Contenido</string>
    <string name="meilogo">MEILogo</string>
    <string name="portada">Portada</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_ejemplo_com">correo@ejemplo.com</string>
    <string name="carrera">Carrera</string>
    <string name="universidad">Universidad</string>
    <string name="descripcion">Descripcion</string>
    <string name="plan_de_estudios">Plan de estudios</string>
    <string name="intercambios">Intercambios</string>
    <string name="perfil_de_egreso">Perfil de egreso</string>
    <string name="valid_email_pattern">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="uni_info">INFORMACIÓN</string>
    <string name="uni_place">UBICACIÓN</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">registrarse</string>
    <string name="offline">Offline</string>
    <string name="todo">TODO</string>
    <string name="becas">Becas</string>
</resources>
