<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.ramir.meiv3.LoginActivity">

    <WebView
        android:id="@+id/wb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone"
        app:expanded="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@android:color/background_light">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/progressrl"
        android:layout_width="match_parent"
        android:layout_height="1500dp"
        android:background="@color/background"
        android:clickable="true"
        android:paddingTop="56dp"
        android:visibility="visible" android:focusable="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@mipmap/meilogo"
            android:contentDescription="@string/meilogo" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:foregroundTint="@android:color/background_light"
            android:indeterminate="false"
            android:progressBackgroundTint="@android:color/background_light"
            android:progressTint="@android:color/holo_blue_bright" />

        <ImageView
            android:id="@+id/ivDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_offline"
            android:contentDescription="@string/offline" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
